--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.github.webbluetoothcg.bletestperipheral" >
 
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
         android:allowBackup="true"
@@ -21,7 +21,7 @@
         </activity>
         <activity
                 android:name=".Peripherals"
-                android:label="@string/app_name"
+                android:label="@string/title_activity_peripheral"
                 android:parentActivityName=".PeripheralsList"/>
     </application>
 
