Implemented some code to handle multiple peripherals

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".Peripherals"
-            android:label="@string/title_activity_peripherals" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
