--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '24.0.1'
 
     defaultConfig {
         applicationId "io.github.webbluetoothcg.bletestperipheral"
